--- a/en_US.lang
+++ b/en_US.lang
@@ -1,16 +1,3 @@
-skin.camoskins20191019114511.skin20191019111528=Water Camo
-skin.camoskins20191019114511.skin20191019111554=Obsidian Camo
-skin.camoskins20191019114511.skin20191019111619=Pink Wool Camo
-skin.camoskins20191019114511.skin20191019111645=Planks Camo
-skin.camoskins20191019114511.firemumbo=Leaves Camo
-skin.camoskins20191019114511.skin20191019111751=Wood Camo
-skin.camoskins20191019114511.skin20191019111817=Red Wool Camo
-skin.camoskins20191019114511.skin20191019111924=Dirt Camo
-skin.camoskins20191019114511.skin20191019111952=Black Wool Camo
-skin.camoskins20191019114511.skin20191019112017=Yellow Wool Camo
-skin.camoskins20191019114511.skin20191019112041=Stone Camo
-skin.camoskins20191019114511.skin20191019112300=Green Wool Camo
-skin.camoskins20191019114511.skin20191019113807=Cobblestone Camo 
-skin.camoskins20191019114511.skin20191019113849=Grey Wool Camo
+skin.camoskins20191019114511.firemumbo=Fire Mumbo Jumbo
 skin.camoskins20191019114511.zombie=Creeper Fan Steeve
 skinpack.camoskins20191019114511=Camo Skins
